[bug-fix] player did not fit mobile

--- a/public/babelbooapp/app.css
+++ b/public/babelbooapp/app.css
@@ -663,14 +663,11 @@ player-card .title-cine p {
     margin-top: 0px;
 }
 
-.player-container {
+#player-container {
     width: 100%;
     height: 360px;
     background-color: #222;
     display: inline-block;
-    /*margin-left: 20px;
-    padding-left: 0px;
-    padding-right: 0px;*/
 }
 
 .answer {
